--- a/package.json
+++ b/package.json
@@ -9,16 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
+    "axios": "^1.7.2",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.2.11",
+    "negotiator": "^0.6.3",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-icons": "^5.2.1",
+    "sharp": "^0.33.4",
+    "styled-components": "^6.1.11",
+    "typewriter-effect": "^2.21.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "file-loader": "^6.2.0",
+    "typescript": "^5"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
